--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"link": "https://steamcommunity.com/groups/esfs3df",
+	"link": "https://steamcommunity.com/groups/testgun",
 	"perChunk": 2,
 	"count": 0,
 	"betweenChunks": 5000,
